<resources>
    <string name="app_name">Khmer Christ Church</string>
    <string name="home_drawermenu">ទំព័រដើម</string>
    <string name="music_drawermenu">បទចំរៀង</string>
    <string name="music_video_drawermenu">ចំរៀងវីដេអូ</string>
    <string name="god_word_drawermenu">ព្រះបន្ទូល</string>
    <string name="activities_drawermenu">សកម្មភាព</string>
    <string name="charity_drawermenu">សប្បុរសធម៌</string>
    <string name="title_header">ព្រះវិហ៊ារអេដែនថ្មី</string>
    <string name="subtitle_header">iengpho@gmail.com</string>

    <string name="close_action_drawer">បិត</string>
    <string name="open_action_drawer">បើក</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
</resources>
