<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_drawer_menu"
        android:title="@string/home_drawermenu"
        android:icon="@drawable/ic_dashboard_black_24dp"/>
    <item
        android:id="@+id/music_drawer_menu"
        android:title="@string/music_drawermenu"
        android:icon="@drawable/ic_music_video_black_24dp"/>
    <item
        android:id="@+id/music_video_drawer_menu"
        android:title="@string/music_video_drawermenu"
        android:icon="@drawable/ic_ondemand_video_black_24dp"/>
    <item
        android:id="@+id/god_word_drawer_menu"
        android:title="@string/god_word_drawermenu"
        android:icon="@drawable/ic_queue_play_next_black_24dp"/>
    <item
        android:id="@+id/activities_drawer_menu"
        android:title="@string/activities_drawermenu"
        android:icon="@drawable/ic_event_black_24dp"/>
    <item
        android:id="@+id/charity_drawer_menu"
        android:title="@string/charity_drawermenu"
        android:icon="@drawable/ic_card_giftcard_black_24dp"/>
</menu>